增加NIO描述